--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "axios": "^0.18.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
+    "canvas": "^2.5.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "face-api.js": "^0.20.0",
