--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
   "bugs": {
     "url": "https://github.com/erynjohn/smarter-mirror/issues"
   },
+  "engines": {
+    "node": "11.1.0"
+  },
   "homepage": "https://github.com/erynjohn/smarter-mirror#readme",
   "dependencies": {
     "@tensorflow/tfjs-node": "^1.1.2",
