--- a/package.json
+++ b/package.json
@@ -35,13 +35,10 @@
     "concurrently": "^4.1.0",
     "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
-    "face-api.js": "^0.20.0",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.5.6",
     "node-webcam": "^0.5.0",
-    "opencv4nodejs": "^4.17.0",
-    "tfjs-yolo": "0.0.3",
-    "tfjs-yolo-tiny": "^1.0.1"
+    "opencv4nodejs": "^4.17.0"
   }
 }
